force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <label>Leave Balance</label>
    <nameField>
        <displayFormat>LB-{00000}</displayFormat>
        <label>Leave Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>