force-app/main/default/objects/Leave_Balance__c/fields/Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days__c</fullName>
    <label>Remaining Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>